privacy notice, notes length bugfix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,6 +85,9 @@
 
       <button class="btn btn-primary btn-lg btn-block" (click)="generate()">Genera la mia autodichiarazione!</button>
 
+      <p class="mt-2 w-100 text-center">I dati inseriti non vengono memorizzati ne trasmessi ad alcuno.<br/>
+        Ogni dato inserito resta esclusivamente sul vostro dispositivo e il documento PDF viene generato dal dispositivo stesso.</p>
+
     </div>
   </div>
 
