update nuova v. ministero

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
     <p class="lead">
       Compila i campi seguenti per generare la tua autodichiarazione per poter circolare!
     </p>
+    <div class="alert alert-info">
+      <b>Attenzione!</b> Abbiamo aggiornato il modello all'<a href="https://www.interno.gov.it/it/notizie/nuovo-modello-autodichiarazioni" target="_blank">ultima versione</a> rilasciata dal Ministero dell'Interno il 17 marzo!
+    </div>
   </div>
 
   <div class="row">
